--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "body-parser": "^1.18.3",
     "concurrently": "^4.1.0",
     "express": "^4.16.4",
+    "lodash": "^4.17.14",
     "mongoose": "^5.3.15"
   },
   "devDependencies": {
